
################################################################################
################################################################################

# automake Makefile
# hash module build system
#
# $Id$

################################################################################
## setup

noinst_LTLIBRARIES = libhash.la

libhash_la_SOURCES = hash.c bufkey.c intkey.c strkey.c treekey.c \
 hash.h bufkey.h intkey.h strkey.h treekey.h

################################################################################
################################################################################

